# nasim

./: .env.example  .gitignore  .opencode  C4.md  C4_Diagrams.md  CLAUDE.md  LICENSE  Makefile  NASEEM.md  README.md  SM.md  SM_Diagrams.md  SQ.md  SQ_Diagrams.md  UC.md  UC_Diagrams.md  chats.py  install.sh  list.csv  pyproject.toml  responses.md  run.py  setup.sh  uninstall.sh
.claude/: CLAUDE.md
.claude/recipes/: aider-continue-opencode.md  litellm-for-mixing.md  models.md  remote-claude-code.md
.claude/research/: 2026-06-16-frontier-agents-with-local-remote-ollama.md
.claude/rules/: anti-patterns.md  architecture.md  bridge-protocol.md  cicd-loop.md  config.md  entities.md  sprint.md  testing.md
.github/workflows/: ci.yml
.grok/: AGENTS.md
.grok/recipes/: tunnel-setup.md
.grok/research/: 2026-06-16-nasim-models-clis-fix-real-tests.md
.grok/rules/: search-first.md  sprint.md
.nasim/: .gitignore  CLAUDE.md  CORE-DIRECTIVE.md  NASIM.md  commands  machines  nasim.md  shared  skills  templates
.nasim/global/: commands  hooks  machines  rules  skills  templates  tools
.nasim/rules/: anti-patterns.md  entities.md  sprint.md
bridge/: server.py  translator.py
bridge/tests/: test_translator.py
cfg/: nasim-config-vars.md  nasim.toml
docs/: ENTITIES.md  README.md  anti-patterns.md  architecture.md  audit.md  capability-matrix.md  cli_agents.txt  entities.md  methodology.md  model-guidance.md  ollama-models.md  runbook.md
docs/0.init/: 0.init.arch.2026.06.12.0.md  0.init.chatgpt.2026.06.12.0.md  0.init.copilot.2026.06.12.0.md  0.init.kimi.2026.06.12.0.md  0.init.mistral.2026.06.12.0.md  0.init.perplexity.2026.06.12.0.md  0.init.prompt.2026.06.12.0.md  0.init.sonnet.medium.2026.06.12.0.md  1.init.deepseek.2026.06.12.0.md  1.init.gemini.2026.06.12.0.md
docs/1.idea/: 1.idea.claude.sonnet.2026.06.12.0.md  1.idea.gork.2026.06.12.0.md  1.idea.prompt.2026.06.12.0.md  1.idea.sonnet.medium.2026.06.12.0.md
docs/C4/: README.md  c4_nasim_component.puml  c4_nasim_component_agent.puml  c4_nasim_component_cli.puml  c4_nasim_component_config.puml  c4_nasim_component_context_graph.puml  c4_nasim_component_edit_strategy.puml  c4_nasim_component_evaluation.puml  c4_nasim_component_git.puml  c4_nasim_component_hooks.puml  c4_nasim_component_mcp.puml  c4_nasim_component_memory.puml  c4_nasim_component_observability.puml  c4_nasim_component_overview.puml  c4_nasim_component_overview_core.puml  c4_nasim_component_overview_infra.puml  c4_nasim_component_plugins.puml  c4_nasim_component_provider.puml  c4_nasim_component_repo_intelligence.puml  c4_nasim_component_router.puml  c4_nasim_component_safety.puml  c4_nasim_component_sandbox.puml  c4_nasim_component_server.puml  c4_nasim_component_session.puml  c4_nasim_component_subagent.puml  c4_nasim_component_tools.puml  c4_nasim_component_wire_log.puml  c4_nasim_container.puml  c4_nasim_context.puml
docs/CL/: README.md  cl_runtime_model.puml
docs/ER/: README.md  er_config_store.puml  er_memory_store.puml  er_observability.puml  er_repo_intelligence.puml  er_session_store.puml  er_wire_log.puml
docs/MM/: README.md
docs/RDM/: 00-principles-and-stack.md  01-project-skeleton.md  README.md  (+9 more)
nasim/: __init__.py  agent.py  cli.py  llm.py  tools.py
scripts/: README.md  audit-rename.sh  claude_self_improve_loop.sh  clean.sh  find.py  install-client.sh  install-server.sh  integration-test.sh  lint.sh  patch-binary.py  restructure_sq_layers.py  scrape.py  sq_gate.py  sync-from-upstream.sh
test/: conftest.py  test_claude_settings.py  test_nasim.sh  test_units.py
tests/: nasim-features.sh  sce1.txt  sce2.txt  test-agents-clis.sh  test-all-options-matrix.sh  test-claude-env.sh  test-config.sh  test-fcc.sh  test-inference-reasoning.sh  test-probe-models.sh  test-sce1.sh  test-setup.sh  test-ssh-transport-real.sh  test_nasim_claude_prompted.sh  test_nasim_real_use.sh
(+1023 files in other folders)
