[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "nasim"
version = "1.0.0"
description = "Remote Ollama on black + frontier agentic-coding CLIs on the laptop, with a clean Claude Code toggle."
readme = "README.md"
requires-python = ">=3.9"
authors = [{ name = "Salim Namvar", email = "salim.namvar@gmail.com" }]
license = { text = "MIT" }
# Zero hard runtime deps: the package uses only the standard library.
# External CLIs (ssh, claude, aider, opencode, litellm, tailscale, uv) are
# discovered at runtime and are optional.
dependencies = []

[project.optional-dependencies]
test = ["pytest>=7"]

[project.scripts]
nasim = "nasim.cli:main_console"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 120

[tool.isort]
profile = "google"
line_length = 120

[tool.pytest.ini_options]
testpaths = ["test"]
addopts = "-q"
